Modification calcule TestPerformance